--- a/complaint/views/complaint_views.xml
+++ b/complaint/views/complaint_views.xml
@@ -7,27 +7,28 @@
                 <sheet>
                     <group>
                         <group>
-                            <field name="name"/>
-                            <field name="description"/>
-                            <field name="state" widget="statusbar"/>
-                            <field name="order_id"/>
-                            <field name="partner_id"/>
-                            <field name="resolution"/>
-                            <field name="reason_id"/>
+                            <field name="name" />
+                            <field name="description" />
+                            <field name="state" widget="statusbar" />
+                            <field name="order_id" />
+                            <field name="partner_id" />
+                            <field name="resolution" />
+                            <field name="reason_id" />
                         </group>
                         <group>
-                            <field name="create_date"/>
-                            <field name="write_date"/>
-                            <field name="closure_date"/>
+                            <field name="create_date" />
+                            <field name="write_date" />
+                            <field name="closure_date" />
                         </group>
                     </group>
                     <notebook>
                         <page string="Missatges">
-                            <field name="message_ids" widget="mail_thread"/>
+                            <field name="message_ids" widget="mail_thread" />
                         </page>
                     </notebook>
                     <footer>
-                        <button name="action_cancel" string="Cancel·lar Tiquet" type="object" class="oe_highlight" attrs="{'invisible': [('state', '=', 'cancel')]}"/>
+                        <button name="action_cancel" string="Cancel·lar Tiquet" type="object"
+                            class="oe_highlight" attrs="{'invisible': [('state', '=', 'cancel')]}" />
                     </footer>
                 </sheet>
             </form>
@@ -39,13 +40,13 @@
         <field name="model">complaint.complaint</field>
         <field name="arch" type="xml">
             <list string="Reclamacions">
-                <field name="name"/>
-                <field name="state" widget="statusbar"/>
-                <field name="order_id"/>
-                <field name="partner_id"/>
-                <field name="closure_date"/>
-                <field name="invoice_count" widget="badge" icon="fa-file-invoice"/>
-                <field name="delivery_count" widget="badge" icon="fa-truck"/>
+                <field name="name" />
+                <field name="state" widget="statusbar" />
+                <field name="order_id" />
+                <field name="partner_id" />
+                <field name="closure_date" />
+                <field name="invoice_count" widget="badge" icon="fa-file-invoice" />
+                <field name="delivery_count" widget="badge" icon="fa-truck" />
             </list>
         </field>
     </record>
