--- a/complaint/views/complaint_views.xml
+++ b/complaint/views/complaint_views.xml
@@ -1,52 +1,7 @@
 <odoo>
-    <record id="view_complaint_form" model="ir.ui.view">
-        <field name="name">complaint.complaint.form</field>
-        <field name="model">complaint.complaint</field>
-        <field name="arch" type="xml">
-            <form string="Reclamació">
-                <sheet>
-                    <group>
-                        <group>
-                            <field name="name"/>
-                            <field name="description"/>
-                            <field name="state" widget="statusbar"/>
-                            <field name="order_id"/>
-                            <field name="partner_id"/>
-                            <field name="resolution"/>
-                            <field name="reason_id"/>
-                        </group>
-                        <group>
-                            <field name="create_date"/>
-                            <field name="write_date"/>
-                            <field name="closure_date"/>
-                        </group>
-                    </group>
-                    <notebook>
-                        <page string="Missatges">
-                            <field name="message_ids" widget="mail_thread"/>
-                        </page>
-                    </notebook>
-                    <footer>
-                        <button name="action_cancel" string="Cancel·lar Tiquet" type="object" class="oe_highlight" attrs="{'invisible': [('state', '=', 'cancel')]}"/>
-                    </footer>
-                </sheet>
-            </form>
-        </field>
-    </record>
-
-    <record id="view_complaint_list" model="ir.ui.view">
-        <field name="name">complaint.complaint.list</field>
-        <field name="model">complaint.complaint</field>
-        <field name="arch" type="xml">
-            <list string="Reclamacions">
-                <field name="name"/>
-                <field name="state" widget="statusbar"/>
-                <field name="order_id"/>
-                <field name="partner_id"/>
-                <field name="closure_date"/>
-                <field name="invoice_count" widget="badge" icon="fa-file-invoice"/>
-                <field name="delivery_count" widget="badge" icon="fa-truck"/>
-            </list>
-        </field>
+    <record id="complaint_action" model="ir.actions.act_window">
+        <field name="name">Reclamacions</field>
+        <field name="res_model">complaint.complaint</field>
+        <field name="view_mode">list,form</field>
     </record>
 </odoo>
