--- a/complaint/views/complaint_views.xml
+++ b/complaint/views/complaint_views.xml
@@ -4,4 +4,26 @@
         <field name="res_model">complaint.complaint</field>
         <field name="view_mode">list,form</field>
     </record>
+
+    <record id="view_complaint_form" model="ir.ui.view">
+        <field name="name">complaint.form</field>
+        <field name="model">complaint.complaint</field>
+        <field name="arch" type="xml">
+            <form string="Complaint">
+                <header>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,open,closed"/>
+                </header>
+                <sheet>
+                    <group>
+                        <field name="name"/>
+                        <field name="description"/>
+                    </group>
+                    <group>
+                        <field name="invoice_count" widget="statinfo" icon="fa-money"/>
+                        <field name="delivery_count" widget="statinfo" icon="fa-truck"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
 </odoo>
