--- a/complaint/views/complaint_views.xml
+++ b/complaint/views/complaint_views.xml
@@ -15,6 +15,7 @@
             <list>
                 <field name="name"/>
                 <field name="description"/>
+                <field name="order_id"/>
                 <field name="state"/>
                 <field name="invoice_count"/>
                 <field name="delivery_count"/>
@@ -31,7 +32,7 @@
                     <field name="state" widget="statusbar" statusbar_visible="new,in_progress,closed,cancelled"/>
                     <button name="action_reopen" string="Reobrir" type="object" invisible="state not in ('cancelled', 'closed')"/>
                     <button name="action_close" string="Tancar" type="object" invisible="state != 'in_progress'"/>
-                    <button name="action_cancel" string="Cancel·lar" type="object" invisible="state in ('new','cancelled', 'closed')"/>
+                    <button name="action_cancel" string="Cancel·lar" type="object" invisible="state in ('cancelled', 'closed')"/>
                 </header>
                 <sheet>
                     <group>
@@ -42,20 +43,25 @@
                         <field name="user_id"/>
                         <field name="create_date"/>
                         <field name="close_date" invisible="state != 'closed'"/>
-                        <field name="message_ids" readonly="1">
-                            <list>
-                                <field name="text"/>
-                                <field name="author_id"/>
-                                <field name="date"/>
-                            </list>
-                        </field>
                     </group>
                     <group>
                         <field name="invoice_count" widget="statinfo" icon="fa-money"/>
                         <field name="delivery_count" widget="statinfo" icon="fa-truck"/>
                     </group>
                     <group>
-                        <field name="reason_id" string="Motiu de Cancel·lació/Tancament" modifiers="{'invisible': [('state', 'not in', ['cancelled', 'closed'])]}" required="1" options="{'no_create': True}"/>                    </group>
+                        <field name="reason_id" string="Motiu de Cancel·lació/Tancament" modifiers="{'invisible': [('state', 'not in', ['cancelled', 'closed'])]}" required="1" options="{'no_create': True}"/>
+                    </group>
+                    <notebook>
+                            <page string="Missatges">
+                                <field name="message_ids" readonly="1">
+                                    <list>
+                                        <field name="text"/>
+                                        <field name="author_id"/>
+                                        <field name="date"/>
+                                    </list>
+                                </field>
+                            </page>
+                    </notebook>
                 </sheet>
             </form>
         </field>
