--- a/complaint/views/complaint_views.xml
+++ b/complaint/views/complaint_views.xml
@@ -31,7 +31,8 @@
                     <field name="state" widget="statusbar" statusbar_visible="new,in_progress,closed,cancelled"/>
                     <button name="action_reopen" string="Reobrir" type="object" invisible="state not in ('cancelled', 'closed')"/>
                     <button name="action_close" string="Tancar" type="object" invisible="state != 'in_progress'"/>
-                    <button name="action_cancel" string="Cancel·lar" type="object" invisible="state in ('new','cancelled', 'closed')"/>
+                    <button name="action_cancel" string="Cancel·lar" type="object" invisible="state in ('cancelled', 'closed')"/>
+                    <button name="action_cancel_sale_command" string="Cancel·lar comanda" type="object" invisible="state not in ('in_progress')"/>
                 </header>
                 <sheet>
                     <group>
