--- a/complaint/views/complaint_views.xml
+++ b/complaint/views/complaint_views.xml
@@ -45,23 +45,25 @@
                         <field name="close_date" invisible="state != 'closed'"/>
                     </group>
                     <group>
-                        <field name="invoice_count" widget="statinfo" icon="fa-money"/>
-                        <field name="delivery_count" widget="statinfo" icon="fa-truck"/>
+                        <label for="invoice_count" string="Factures associades"/>
+                        <field name="invoice_count" nolabel="1"/>
+                        <label for="delivery_count" string="Enviaments Associats"/>
+                        <field name="delivery_count" nolabel="1"/>
                     </group>
                     <group>
                         <field name="reason_id" string="Motiu de Cancel·lació/Tancament" modifiers="{'invisible': [('state', 'not in', ['cancelled', 'closed'])]}" required="1" options="{'no_create': True}"/>
                         <field name="resolution" string="Descripció de la Resolució Final" invisible="state not in ('closed')"/>
                     </group>
                     <notebook>
-                            <page string="Missatges">
-                                <field name="message_ids" readonly="1">
-                                    <list>
-                                        <field name="text"/>
-                                        <field name="author_id"/>
-                                        <field name="date"/>
-                                    </list>
-                                </field>
-                            </page>
+                        <page string="Missatges">
+                            <field name="message_ids" readonly="1">
+                                <list>
+                                    <field name="text"/>
+                                    <field name="author_id"/>
+                                    <field name="date"/>
+                                </list>
+                            </field>
+                        </page>
                     </notebook>
                 </sheet>
             </form>
