--- a/complaint/views/complaint_views.xml
+++ b/complaint/views/complaint_views.xml
@@ -42,6 +42,7 @@
                         <field name="partner_id"/>
                         <field name="user_id"/>
                         <field name="create_date"/>
+                        <field name="write_date"/>
                         <field name="close_date" invisible="state != 'closed'"/>
                     </group>
                     <group>
@@ -51,7 +52,7 @@
                         <field name="delivery_count" nolabel="1"/>
                     </group>
                     <group>
-                        <field name="reason_id" string="Motiu de Cancel·lació/Tancament" modifiers="{'invisible': [('state', 'not in', ['cancelled', 'closed'])]}" required="1" options="{'no_create': True}"/>
+                        <field name="reason_id" string="Motiu de Cancel·lació/Tancament" modifiers="{'invisible': [('state', 'not in', ['cancelled', 'closed'])]}" options="{'no_create': True}"/>
                         <field name="resolution" string="Descripció de la Resolució Final" invisible="state not in ('closed')"/>
                     </group>
                     <notebook>
